@@ -1,52 +1,82 @@
-.\" -*- nroff -*-
-.\" Copyright (c) 2005 Thorsten Kukuk kukuk@suse.de
-.\"
-.TH pam_echo 8 "September 2005" "pam_echo" "Reference Manual"
-.SH NAME
-pam_echo - PAM module for printing text messages
-.SH DESCRIPTION
+.\" ** You probably do not want to edit this file directly **
+.\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
+.\" Instead of manually editing it, you probably should edit the DocBook XML
+.\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
+.TH "PAM_ECHO" "8" "02/13/2006" "Linux\-PAM Manual" "Linux\-PAM Manual"
+.\" disable hyphenation
+.nh
+.\" disable justification (adjust text to left margin only)
+.ad l
+.SH "NAME"
+pam_echo \- PAM module for printing text messages
+.SH "SYNOPSIS"
+.HP 12
+\fBpam_echo.so\fR [file=\fI/path/message\fR]
+.SH "DESCRIPTION"
+.PP
 The
-.B pam_echo
-PAM module is for printing text messages to inform user about
-special things. Sequences starting with the
-.B %
+\fIpam_echo\fR
+PAM module is for printing text messages to inform user about special things. Sequences starting with the
+\fI%\fR
 character are interpreted in the following way:
 .TP
-.B %H
+\fI%H\fR
 The name of the remote host (PAM_RHOST).
 .TP
-.B %h
+\fI%h\fR
 The name of the local host.
 .TP
-.B %s
+\fI%s\fR
 The service name (PAM_SERVICE).
 .TP
-.B %t
+\fI%t\fR
 The name of the controlling terminal (PAM_TTY).
 .TP
-.B %U
+\fI%U\fR
 The remote user name (PAM_RUSER).
 .TP
-.B %u
+\fI%u\fR
 The local user name (PAM_USER).
 .PP
 All other sequences beginning with
-.B %
+\fI%\fR
 expands to the characters following the
-.B %
+\fI%\fR
 character.
-.SH OPTIONS
-The following options may be passed to all types of management
-groups:
+.SH "OPTIONS"
 .TP
-.BR "file=" "message"
-.B pam_echo
-will print the content of the file
-.B message
-with the PAM conversion function as PAM_TEXT_INFO.
+\fBfile=\fR\fB\fI/path/message\fR\fR
+The content of the file
+\fI/path/message\fR
+will be printed with the PAM conversion function as PAM_TEXT_INFO.
+.SH "MODULE SERVICES PROVIDED"
+.PP
+All services are supported.
+.SH "RETURN VALUES"
+.TP
+PAM_BUF_ERR
+Memory buffer error.
+.TP
+PAM_SUCCESS
+Message was successful printed.
+.TP
+PAM_IGNORE
+PAM_SILENT flag was given or message file does not exist, no message printed.
+.SH "EXAMPLES"
+.PP
+For an example of the use of this module, we show how it may be used to print informations about good passwords:
+.sp
+.nf
+password optional pam_echo.so file=/usr/share/doc/good\-password.txt
+password required pam_unix.so
+      
+.fi
+.sp
 .SH "SEE ALSO"
-.BR pam.conf (8),
-.BR pam.d (8),
-.BR pam (8)
-.SH AUTHOR
+.PP
+\fBpam.conf\fR(8),
+\fBpam.d\fR(8),
+\fBpam\fR(8)
+.SH "AUTHOR"
+.PP
 Thorsten Kukuk <kukuk@suse.de>
