@@ -1,0 +1,168 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+                   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<refentry id='pam_echo'>
+  <refmeta>
+    <refentrytitle>pam_echo</refentrytitle>
+    <manvolnum>8</manvolnum>
+    <refmiscinfo class='setdesc'>Linux-PAM Manual</refmiscinfo>
+  </refmeta>
+
+  <refnamediv id='pam_echo-name'>
+    <refname>pam_echo</refname>
+    <refpurpose>PAM module for printing text messages</refpurpose>
+  </refnamediv>
+
+<!-- body begins here -->
+
+  <refsynopsisdiv>
+    <cmdsynopsis id="pam_echo-cmdsynopsis">
+      <command>pam_echo.so</command>
+      <arg choice="opt">
+        file=<replaceable>/path/message</replaceable>
+      </arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsect1 id='pam_echo-description'>
+    <title>DESCRIPTION</title>
+    <para>
+      The <emphasis>pam_echo</emphasis> PAM module is for printing
+      text messages to inform user about special things. Sequences
+      starting with the <emphasis>%</emphasis> character are
+      interpreted in the following way:
+    </para>
+    <variablelist>
+      <varlistentry>
+        <term><emphasis>%H</emphasis></term>
+        <listitem>
+          <para>The name of the remote host (PAM_RHOST).</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis remap='B'>%h</emphasis></term>
+        <listitem>
+          <para>The name of the local host.</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis>%s</emphasis></term>
+        <listitem>
+          <para>The service name (PAM_SERVICE).</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis>%t</emphasis></term>
+        <listitem>
+          <para>The name of the controlling terminal (PAM_TTY).</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis>%U</emphasis></term>
+        <listitem>
+          <para>The remote user name (PAM_RUSER).</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><emphasis>%u</emphasis></term>
+        <listitem>
+          <para>The local user name (PAM_USER).</para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+
+    <para>
+      All other sequences beginning with <emphasis>%</emphasis>
+      expands to the characters following the <emphasis>%</emphasis>
+      character.
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_echo-options'>
+    <title>OPTIONS</title>
+    <variablelist>
+      <varlistentry>
+        <term>
+          <option>file=<replaceable>/path/message</replaceable></option>
+        </term>
+        <listitem>
+          <para>
+            The content of the file <filename>/path/message</filename>
+            will be printed with the PAM conversion function as PAM_TEXT_INFO.
+          </para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+  </refsect1>
+
+  <refsect1 id="pam_echo-services">
+    <title>MODULE SERVICES PROVIDED</title>
+    <para>
+      All services are supported.
+    </para>
+  </refsect1>
+
+
+  <refsect1 id="pam_access-return_values">
+    <title>RETURN VALUES</title>
+    <variablelist>
+      <varlistentry>
+        <term>PAM_BUF_ERR</term>
+        <listitem>
+           <para>
+             Memory buffer error.
+          </para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>PAM_SUCCESS</term>
+        <listitem>
+           <para>
+             Message was successful printed.
+          </para>
+        </listitem>
+      </varlistentry>
+          <varlistentry>
+        <term>PAM_IGNORE</term>
+        <listitem>
+           <para>
+             PAM_SILENT flag was given or message file does not
+             exist, no message printed.
+          </para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+  </refsect1>
+
+  <refsect1 id='pam_echo-examples'>
+    <title>EXAMPLES</title>
+    <para>
+      For an example of the use of this module, we show how it may be
+      used to print informations about good passwords:
+      <programlisting>
+password optional pam_echo.so file=/usr/share/doc/good-password.txt
+password required pam_unix.so
+      </programlisting>
+    </para>
+  </refsect1>
+
+
+  <refsect1 id='pam_echo-see_also'><title>SEE ALSO</title>
+  <para>
+    <citerefentry>
+      <refentrytitle>pam.conf</refentrytitle><manvolnum>8</manvolnum>
+    </citerefentry>,
+    <citerefentry>
+      <refentrytitle>pam.d</refentrytitle><manvolnum>8</manvolnum>
+    </citerefentry>,
+    <citerefentry>
+      <refentrytitle>pam</refentrytitle><manvolnum>8</manvolnum>
+    </citerefentry></para>
+  </refsect1>
+
+  <refsect1 id='pam_echo-author'>
+    <title>AUTHOR</title>
+    <para>Thorsten Kukuk &lt;kukuk@suse.de&gt;</para>
+  </refsect1>
+</refentry>
